demo/assets/tectonic/console-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: tectonic-console
    component: ui
  name: tectonic-console
  namespace: tectonic-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tectonic-console
      component: ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tectonic-console
        component: ui
      name: tectonic-console
    spec:
      containers:
      - command:
        - /opt/bridge/bin/bridge
        image: quay.io/coreos/tectonic-console:v0.9.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: tectonic-console
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 50Mi
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /etc/tectonic-ca-cert-secret
          name: tectonic-ca-cert-secret
          readOnly: true
        - mountPath: /etc/ssl/certs
          name: ssl-certs-host
          readOnly: true
        - mountPath: /usr/share/ca-certificates
          name: ca-certs-host
          readOnly: true
        - mountPath: /etc/tectonic/licenses
          name: tectonic-license
          readOnly: true
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: coreos-pull-secret
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: tectonic-ca-cert-secret
        secret:
          secretName: tectonic-ca-cert-secret
      - hostPath:
          path: /etc/ssl/certs
        name: ssl-certs-host
      - hostPath:
          path: /usr/share/ca-certificates
        name: ca-certs-host
      - name: tectonic-license
        secret:
          secretName: tectonic-license
status:
  availableReplicas: 1
  observedGeneration: 2
  replicas: 1
  updatedReplicas: 1
