demo/assets/tectonic/identity-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tectonic-identity
  labels:
    app: tectonic-identity
    component: identity
spec:
  selector:
    app: tectonic-identity
    component: identity
  type: NodePort
  ports:
  - name: worker
    protocol: TCP
    port: 5556
