demo/assets/tectonic/node-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: prometheus-node-exporter
  labels:
    app: node-exporter
    name: prometheus-node-exporter
spec:
  clusterIP: None
  type: ClusterIP
  ports:
  - name: scrape
    port: 9100
    protocol: TCP
  selector:
    app: node-exporter
